[package]
name = "jterm"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
ratatui-image = "1.0"
resvg = "0.45"
tiny-skia = "0.11"
image = "0.25"
